# quackpipe

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: release.yml
examples/: .env_example  config.yml
examples/hierarchical/: README.md  base.yml  dev.yml  prod.yml
src/quackpipe/: __init__.py  __main__.py  builder.py  cli.py  config.py  config.schema.yml  core.py  etl_utils.py  exceptions.py  secrets.py  utils.py  validation_utils.py
src/quackpipe/commands/: common.py  generate_sqlmesh_config.py  preview_config.py  ui.py  validate.py
src/quackpipe/sources/: __init__.py  azure_blob.py  base.py  csv.py  ducklake.py  mysql.py  parquet.py  postgres.py  s3.py  sqlite.py
src/quackpipe/sources/ducklake/: __init__.py  providers.py
src/quackpipe/test_utils/: azurite_fixtures.py  data_generators.py  ducklake_fixtures.py  fixtures.py  minio_fixtures.py  mysql_fixtures.py  postgres_fixtures.py
src/tests/: conftest.py  test_ducklake_handler.py  test_e2e_ducklake_integration.py  test_etl_utils.py  test_postgres_handler.py  test_quackpipe.py  test_s3_handler.py  test_secret_management.py
tests/: conftest.py  test_azure_blob_handler.py  test_cli.py  test_config.py  test_config_validation.py  test_ducklake_handler.py  test_ducklake_integration.py  test_e2e_ducklake_integration.py  test_etl_utils.py  test_hierarchical_config.py  test_hierarchical_env.py  test_integration.py  test_integration_hierarchical.py  test_mysql_handler.py  test_postgres_handler.py  test_quackpipe.py  test_s3_handler.py  test_secret_management.py  test_sqlite_handler.py  test_validation_deep.py
