[project]
name = "quackpipe"
version = "0.8.0"
requires-python = ">=3.12"
description = "A configuration-driven and programmatic ETL helper for DuckDB."
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "pyyaml",
    "jsonschema",
    "duckdb>=1.4.4",
    "pandas",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "quackpipe[fixtures]",
    "ipdb",
    "types-pyyaml",
    "types-jsonschema"
]
fixtures = [
    "testcontainers[postgres,minio,mysql,azurite]==4.12.0",
    "sqlalchemy",
    "psycopg2-binary", # for some reason is not included on the testcontainers[postgres]
    "httpx"
]
lint = [
    "ruff",
    "mypy"
]
logging = [
    "structlog>=23.0.0",
    "colorlog>=6.0.0",
]
postgres = ["psycopg"]
mysql = ["mysql-connector-python"]
s3 = ["pyarrow"]
kafka = ["confluent-kafka"]
azure = ["azure-storage-blob"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quackpipe = ["*.yml"]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "A",    # flake8-builtins
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
]
# Allow logging format strings
ignore = [
    "G201",
    "G202",
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"test_*.py"=["ARG001", "ARG002"]
"conftest.py"=["ARG001", "ARG002"]
"*/fixtures/*"=["ARG001", "ARG002"]

[tool.ruff.format]
# Use double quotes
quote-style = "double"

# Indent with spaces
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_configs = true

[project.scripts]
quackpipe = "quackpipe.cli:main"

